unpackaged/main/default/objects/Worker__c/Worker__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Worker</label>
</CustomObject>