unpackaged/main/default/objects/Worker__c/fields/Batch_Retry_Time__c.field-meta.xml
<CustomField>
    <fullName>Batch_Retry_Time__c</fullName>
    <label>Batch Retry Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>