unpackaged/main/default/objects/Worker__c/fields/Batch_Size_Limit__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size_Limit__c</fullName>
    <label>Batch Size Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>