unpackaged/main/default/objects/Worker__c/fields/Save_Log_On_Error__c.field-meta.xml
<CustomField>
    <fullName>Save_Log_On_Error__c</fullName>
    <description>Comma delimited list of job types</description>
    <label>Save Log On Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>