unpackaged/main/default/objects/Worker__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <description>Comma delimited list of job types</description>
    <label>Send Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>